<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/download_settings">
        <Preference
            app:iconSpaceReserved="false"
            app:key="downloadDir"
            app:title="@string/download_directory" />
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="audio"
            app:summary="@string/extract_audio_summary"
            app:title="@string/extract_audio" />
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="thumbnail"
            app:summary="@string/create_thumbnail_summary"
            app:title="@string/create_thumbnail" />
        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="open"
            app:summary="@string/open_when_finish_summary"
            app:title="@string/open_when_finish" />
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/general_settings">
        <ListPreference
            android:entries="@array/entries"
            android:entryValues="@array/entryValues"
            app:iconSpaceReserved="false"
            app:key="language"
            app:useSimpleSummaryProvider="true"
            app:dialogTitle="@string/language_settings"
            app:title="@string/language" />
    </PreferenceCategory>
</PreferenceScreen>